--- a/conclusion.tex
+++ b/conclusion.tex
@@ -5,5 +5,5 @@ We show that the attack severity significantly increases the chunk loss ratio, a
 As a countermeasure, we propose a detection mechanism where peers are able to collaboratively file a complaint to the source when their average aggregated satisfaction drops below a certain threshold so the source can replace suspicious headnodes.
 % Accordingly, the source can replace specific headnodes that is most likely to be malicious.
 
-Our simulations show that the detection mechanism is capable of restoring \~95-100\% of peers satisfaction level while removing \~80-90\% of malicious headnodes from its neighbor list while inducing a low overhead of approximately 8\%.
+Our simulations show that the detection mechanism is capable of restoring 95-100\% of peers satisfaction level while removing 80-90\% of malicious headnodes from its neighbor list while inducing a low overhead of approximately 8\%.
 As an ongoing work, we focus on evaluating the resilience of our approach against various $BM$ cheating strategies and integrating anonymous monitoring for proactive defense.
