--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Conclusion \& Future Work}
 \label{sec:conclusion}
-In this work\footnote{Research supported in part by EC H2020 CIPSEC GA \#700378 and BMBF TUD-CRISP}, we focus on the class of internal inference attacks for pull-based overlays where the attacker conducts a $BM$ cheating attack after placing malicious peers as headnodes.
+In this work\footnote{Research supported in part by EC H2020 CIPSEC GA \#700378 and BMBF TUD-CRISP}, we focus on the class of internal inference attacks for pull-based overlays. The attacker conducts a $BM$ cheating attack after placing malicious peers as headnodes.
 We show that the attack severity significantly increases the chunk loss ratio, accompanied by low satisfaction level experienced by benign peers.
 As a countermeasure, we propose a detection mechanism where peers are able to collaboratively file a complaint to the source when their average aggregated satisfaction drops below a certain threshold so the source can replace suspicious headnodes.
 % Accordingly, the source can replace specific headnodes that is most likely to be malicious.
