--- a/related.tex
+++ b/related.tex
@@ -1,20 +1,15 @@
 \section{Related Work}
 \label{sec:related}
 
-We overview the prominent existing work on attacks and attack detection in the area of P2P streaming systems. Most prior work has considered three attack types: (i) pollution attacks, i.e., flooding the overlay with arbitrary content and claiming it to be relevant chunks, (ii) free riding, i.e., participating in the overlay without contributing, and iii) cheating attacks, i.e., maliciously dropping packets or manipulating buffer-maps. 
+We overview the prominent existing work on attacks and their detection in the context of P2P streaming systems. Most prior work has considered three attack types: (i) pollution attacks, i.e., flooding the overlay with arbitrary content and claiming it to be relevant chunks, (ii) free riding, i.e., participating in the overlay without contributing, and iii) cheating attacks, i.e., maliciously dropping packets or manipulating buffer-maps. 
 
-Pollution attacks are one of the most common attacks \cite{pollution1}. 
-As the attack strategy differs from the \drop attack and efficient network coding techniques \cite{nc} and others \cite{pollution2} already exist, we do not consider those attacks in our work.
-% Consequently, researchers have studied them extensively and there exist various detection and mitigation schemes .    
-% As the existing approaches seem to render the attack harmless, we do not focus on it in this work but rather assume that appropriate measures against these attacks such as network coding  are already in place.
+Pollution attacks are one of the most common attacks \cite{pollution1}. Strategies such as network coding \cite{nc} and others \cite{pollution2} 
+can effectively mitigate these attacks. 
 
-In contrast, the main approach to counter free riding are incentives \cite{defending,defending2}, i.e., rewarding peers that distribute the stream to others; 
-% e.g., with an increased flexibility in the neighbor selection or positions closer to the source to receive a better service. 
-% As a consequence, free riders likely end up far from the source, meaning that they are not required to forward the stream anyways, because all their neighbors already requested the chunks from others by the time the free riders receive them. 
+In contrast, the main approach to counter free riding are incentives \cite{defending,defending2}, i.e., rewarding peers that distribute the stream to others. 
 However, these strategies are only effective for peers that aim to minimize their level of participating. 
 
-% Hatem: trim
-% Cheating attacks are severe denial-of-service attacks, performed with the goal of maximizing the damage to the overlay and preventing peers from downloading the video.   
+  
 Cheating attacks are severe DoS attacks, performed to maximize the damage to the overlay and preventing peers from downloading the stream.   
 \textit{Antiliar} is a general defense mechanism against a diverse set of attacks, including dropping and buffer map manipulation\cite{antiliar}.
 Mainly, \textit{Antiliar} tracks peers behaviors in a secure progress log and thus, detecting misbehaving peers by identifying irregularities in the log. 
@@ -22,7 +17,7 @@ While highly effective, \textit{Antiliar} relies on expensive cryptographic oper
 Moreover, \textit{Antiliar} uses a central entity to review the logs, creating additional security and privacy problems. 
 
 
-An alternative approach \cite{nguyen2014resilience} relies on redundancy by enforcing diversity when requesting chunks. 
+An alternative  decentralized approach \cite{nguyen2014resilience} relies on redundancy by enforcing diversity when requesting chunks. 
 In this manner, the attacker has to control a higher fraction of nodes to achieve any severe damage by cheating.
 The work focuses in particular on attacks on headnodes yet assumes an external attacker that can take over arbitrary nodes at will.
 In this context, the idea of swapping headnodes frequently to mitigate the impact of the attacker's control can significantly decrease the attack severity \cite{nguyen2016swap}.
