--- a/evaluation.tex
+++ b/evaluation.tex
@@ -3,40 +3,20 @@
 
 The goal of this section is to address two research questions: 
 First, we quantify the severity of \drop. 
-Second, we evaluate the proposed detection mechanism's performance in terms of effectiveness and overhead. 
+Second, we evaluate the proposed detection mechanism's performance in terms of effectiveness and efficiency. 
 We start by describing the simulation model and set-up before detailing the simulation results and their interpretation for both research questions.
 
 
 \subsection{Simulation Framework, Parameters and Metrics}
-Our simulation framework relies on OSSim \cite{nguyen2013ossim}. 
+Our simulation framework builds on OSSim \cite{nguyen2013ossim}. 
 OSSim is a packet level simulator for DONet \cite{zhang2005coolstreaming}, a pull-based online streaming overlay.
 All our overlays use the network topology generator GT-ITM \cite{GT} with 1000 peers connected to 400 edge router. Furthermore, our simulation time is 500s and the presented results are averaged over 10 runs. 
 
 We differentiate between malicious and benign peers when considering their online times. 
 We assume that malicious peers join the overlay early and do not leave before the content dissemination ends in order to maximize their impact. 
-In contrast,  benign peers joining is based on Pareto distribution, while their leaving times is estimated using Lognormal distributions, as motivated by real-world measurements \cite{distribution}.
+In contrast,  benign peers join based on Pareto distribution and leave according to Lognormal distributions, as motivated by real-world measurements \cite{distribution}.
 Benign peers can rejoin the overlay in a uniform distribution around 10s. For both case studies, the streaming rate is $400kbps$, the chunk size $2500B$ and the buffer size $30s$.
 
-
-% 
-% \begin{table}[ht]
-% \center
-% \caption{Acronyms}
-% \begin{tabular}{|c|c||c|c|}
-% \hline
-% 
-% \bf{Var.} & \bf{Desc.}  & \bf{Var.} & \bf{Desc.} \\\hline\hline
-% 
-% mal. headnodes $\eta x$ & $\{5,8,10\}$ & chunk size & 2500B \\\hline
-% sat. threshold $\satThres$ & $\{0.5,0.7,0.95\}$ & $\treply$ & 10s\\\hline
-% mal. neighbors $MN$  & $\{0,15,24,70,100\}$ & stream Rate & 400kbps\\\hline
-% min. responses $\minP$ &  $\{3,4\}$ & buffer size & 30s  \\\hline
-% det. allowed $\minDR$ & 10 & list size $LS$ & $\{8,10\}$\\\hline
-%   
-% \end{tabular}
-% \label{tab:parameters}
-% \end{table}
-% \vspace{-2.5mm}
 
 The following metrics characterize the performance.
 \subsubsection*{Satisfaction $\sat$} The satisfaction is the fraction of chunks peers receive in time, averaged over all peers. 
@@ -58,22 +38,22 @@ Figure~\ref{subfig:avg-loss-donet} displays the average chunk loss ratio.
 Unsurprisingly, the average loss is 100\% when $\eta x= LS =10$, which means that the source's $LS$ is utterly saturated with malicious headnodes, i.e., no chunks are transmitted to the rest of the overlay.
 Thus,, the average peer satisfaction is always 0\%. 
 
-If $\eta x < 10$, the average loss initially reaches up to ~82\% for $(\eta x, MN)=(7, 70)$, for $(\eta x, MN)=(5, 15)$, the loss ratio is ~54\% and ~73\% for $(\eta x, MN)=(8, 24)$, as shown in Figure~\ref{subfig:avg-loss-donet}.
+If $\eta x < 10$, the average loss initially reaches up to 82\% for $(\eta x, MN)=(7, 70)$, for $(\eta x, MN)=(5, 15)$, the loss ratio is ~54\% and ~73\% for $(\eta x, MN)=(8, 24)$, as shown in Figure~\ref{subfig:avg-loss-donet}.
 If $\eta x$ or $MN$ increases, benign peers experience severe service degradation for a longer time period. 
 Benign peers close to the source suffer from overload, leading to a high ratio of missed chunks. 
 Nevertheless, the loss ratio decreases once a fraction of benign peers are able to serve the rest of the overlay.
 
 Figure~\ref{subfig:satisfaction-donet} presents the average peer satisfaction level $\sat$.
-As a consequence of experiencing high chunk loss rate, higher values of $\eta x, MN$ result in lower peer satisfaction over time, where benign peers at $(\eta x, MN)=(5, 15)$ restore their satisfaction level at approximately 340s, which is earlier than at $(\eta x, MN)=(7, 70)$ and $(\eta x, MN)=(8, 24)$.
+As a consequence of experiencing high chunk loss rate, higher values of $\eta x$ and $MN$ result in lower peer satisfaction over time, where benign peers at $(\eta x, MN)=(5, 15)$ restore their satisfaction level at approximately 340s, which is earlier than at $(\eta x, MN)=(7, 70)$ and $(\eta x, MN)=(8, 24)$.
 
 Now, we analyze the attack's impact while SWAP is operating.
 During SWAP, peers nominate new headnodes and forward these nominations to the source. 
-Malicious peers abuse the mechanism via nominating other malicious peers at each nomination round. 
+Malicious peers abuse the mechanism by nominating other malicious peers at each nomination round. 
 Moreover, malicious peers connected to benign headnodes are eventually nominated to the source and thus can occupy the source's neighbor list $LS$. 
 
 As shown in Figure~\ref{subfig:avg-loss-donet}, comparing the same values at $(\eta x, MN)=(5, 15)$ for both DONet and SWAP show that the impact of the attack is more significant if SWAP is active.
-Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, as soon as malicious peers control the neighbor list, the average loss increases up to ~97\%. 
-For the same reason, the satisfaction level of benign peers eventually decreases to ~6\%, which highlights the unsuitability of SWAP against our proposed attack.
+Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, as soon as malicious peers control the neighbor list, the average loss increases up to 97\%. 
+For the same reason, the satisfaction level of benign peers eventually decreases to 6\%, which highlights the unsuitability of SWAP against our proposed attack.
 
 
 
@@ -148,14 +128,14 @@ We now evaluate the performance of the detection mechanism.
 Benign peers execute the detection mechanism as described in Section~\ref{sec:detection} whereas malicious peers aim to misuse the mechanism.
 More precisely, malicious peers reply with a satisfaction level of 0 if the complaint might remove a benign peer and 1 if it might remove a malicious peer. 
 
-In order to do so, we selected the following combinations for $(\eta x, MN)$: $(5, 80)$, $(8, 50)$ and $(10, 50)$ to assess the performance of the mechanism in severe attack conditions.
+In order to do so, we chose $(\eta x, MN) \in \{(5, 80), (8, 50), (10, 50)\}$ to assess the performance of the mechanism in severe attack conditions.
 The satisfaction threshold $\satThres$ is set to 0.95 to measure if peers are able to fully restore their satisfaction level when the detection mechanism is operating.
 The detection mechanism is effective starting $t=250s$ to allow for a reasonable amount of peers to join the overlay to adequately assess the efficiency of the mechanism.
 In this scenario, every peer is allowed to initiate $\minDR=10$ detection requests for $t_{det}=500s$, and the minimum number of responses to generate a complaint is $\minP=3$. 
 We discuss the effect of varying those parameters later on.
 
-As depicted in Figure~\ref{subfig:BRNL}, after the detection mechanism starts operating at $t=250s$, we observe an increase in the benign headnodes ratio in the source's neighbor list.
-For instance, for $(\eta x, MN)=(5, 80)$, the source successfully attains ~80\% benign headnodes due to the detection mechanism.
+As depicted in Figure~\ref{subfig:BRNL}, we observe an increase in the benign headnodes ratio in the source's neighbor list after the detection mechanism starts operating at $t=250s$.  
+For instance, if $(\eta x, MN)=(5, 80)$, the source successfully attains 80\% benign headnodes due to the detection mechanism.
 For $(\eta x, MN)=(8, 50)$, the $BRNL$ ratio increases up to 90-100\%, which reflects the efficiency of the detection mechanism in replacing malicious headnodes to restore peers' satisfaction levels. 
 Even if the source is initially only connected to malicious headnodes, i.e., $\eta x=10$, the detection mechanism is capable of restoring a $BRNL$ of close to 80\%. 
 
